--- a/index.html
+++ b/index.html
@@ -8,19 +8,32 @@
     </head>
 
     <body>
+
         <h1>How about some color markers</h1>
         <div class="container">
             <div class="marker red">
+                <div class="cap"></div>
+        <div class="sleeve"></div>
             </div>
             <div class="marker yellow">
+                <div class="cap"></div>
+        <div class="sleeve"></div>
             </div>
             <div class="marker green">
+                <div class="cap"></div>
+            <div class="sleeve"></div>
             </div>
             <div class="marker cyan">
+                <div class="cap"></div>
+        <div class="sleeve"></div>
             </div>
             <div class="marker blue">
+                <div class="cap"></div>
+        <div class="sleeve"></div>
             </div>
             <div class="marker magenta">
+                <div class="cap"></div>
+        <div class="sleeve"></div>
             </div>
         </div>
 
